# CHIP-8

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: chip8.rs  lib.rs  main.rs
src/chip8/: cpu.rs  handlers.rs  instructions.rs
src/lib/: constants.rs  cpu.rs  gui.rs  lib.rs  state.rs
src/lib/cpu/: handlers.rs  instructions.rs
src/lib/gui/: events.rs  renderer.rs  window.rs
tests/: cpu_test.rs
