[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chip8"
path = "src/lib/lib.rs"

[[bin]]
name = "chip8-emulator"
path = "src/bin/main.rs"

[dependencies]
sdl2 = "0.35.2"